# GeneticCars

./: .gitignore  GeneticCars.VC.db  GeneticCars.sln  sfmldep.sh
GeneticCars/: AppWindow.cpp  AppWindow.h  BodyShape.cpp  BodyShape.h  BodyShape_ph.cpp  BodyShape_ph.h  CMakeLists.txt  Car.cpp  Car.h  CarConst.h  Car_ph.cpp  Car_ph.h  Chromosome.cpp  Chromosome.h  ClassDiagram1.cd  Drawing.cpp  Drawing.h  Element_ph.cpp  Element_ph.h  EvolutionaryConst.h  EvolutionaryService.cpp  EvolutionaryService.h  GeneticCars.vcxproj  GeneticCars.vcxproj.filters  IndividualService.cpp  IndividualService.h  MainController.cpp  MainController.h  PhysBodyShape.cpp  PhysBodyShape.h  PhysCar.cpp  PhysCar.h  PhysElement.cpp  PhysElement.h  PhysPopulation.cpp  PhysPopulation.h  PhysSimulation.cpp  PhysSimulation.h  PhysTrack.cpp  PhysTrack.h  (+33 more)
GeneticCars/UnitTests/GeneticCars.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  GeneticCars.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
GeneticCars/cmake_modules/: FindBox2D.cmake
GeneticCars/include/: AppWindow.cpp  AppWindow.h  BodyShape.h  Car.h  CarConst.h  Chromosome.cpp  Chromosome.h  Drawing.h  EvolutionaryService.h  IndividualService.h  MainController.h  PhysBodyShape.h  PhysCar.h  PhysElement.h  PhysPopulation.h  PhysSimulation.h  PhysTrack.h  PhysWheel.h  PopulationManager.h  RandomService.h  ShapePoint.h  Wheel.h
GeneticCars/src/: AppWindow.cpp  Car.cpp  Chromosome.cpp  Drawing.cpp  EvolutionaryService.cpp  IndividualService.cpp  MainController.cpp  PhysBodyShape.cpp  PhysCar.cpp  PhysElement.cpp  PhysPopulation.cpp  PhysSimulation.cpp  PhysTrack.cpp  PhysWheel.cpp  ShapePoint.cpp  Wheel.cpp  main.cpp  mainTest.cpp
GeneticCars/test/: CMakeLists.txt  TestAppWindow.cpp  TestBodyShape.cpp  TestCar.cpp  TestChromosome.cpp  TestDrawing.cpp  TestMainController.cpp  TestPhysBodyShape.cpp  TestPhysCar.cpp  TestPhysElement.cpp  TestPhysPopulation.cpp  TestPhysSimulation.cpp  TestPhysTrack.cpp  TestPhysWheel.cpp  TestShapePoint.cpp  TestWheel.cpp
